add support for throttled records to palantir